--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
         <link rel="stylesheet" href="./css/reset.css">
         <link rel="stylesheet" href="./css/fonts.css">
         <link rel="stylesheet" href="./css/main.css">
-        <style>
-            * {
-                font-size: OpenSans-Light;
-            }
-        </style>
+        <link rel="stylesheet" href="./fonts/OpenSans-Light.ttf">
         <!--Css Api-->
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
             <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
@@ -23,18 +19,121 @@
 </head>
 <body>
     <main>
-        <section>
-            <article>
-                <div>
-                    <span>
-                        <img src="" alt="">
-                    </span>
-                    <span>
-                        
-                    </span>
-                </div>
-            </article>
-        </section>
+        <!--Container 01-->
+            <section class="container-xxl">
+                <article>
+                    <div class="d-flex ">
+                        <span class="w-50">
+                            <img class="w-100" src="./img/PrimeiraImg.webp" alt="">
+                        </span>
+                        <span style="background-color: var(--Bs-primaria);" class="w-50 d-flex flex-column justify-content-center align-items-center">
+                            <span style="color: var(--color-primaria);" class="d-flex flex-column">
+                                <h1 >6. Prática 2:</h1>
+                                <span style="color: var(--color-Secundaria); font-family: OpenSans-bold !important;">
+                                    <h1><strong>Comportamentos e atitudes de</strong></h1>
+                                    <h1><strong>Resiliência e adaptabilidade</strong></h1>
+                                </span>
+                            </span>
+                        </span>
+                    </div>
+                </article>
+            </section>
+        <!--Container 01-->
+        <!--Container 02-->
+            <section class="container-xxl">
+                <article class="p-5" style="background: var(--Bs-Secundario);">
+                    <div>
+                        <span>
+                            <p>Como parte dos requisitos para obter o badge deste curso, você estudará diferentes lições práticas como esta. Explore detalhadamente cada uma das partes que compõe a prática e role para baixo para finalizá-la</p>
+                        </span>
+                    </div>
+                </article>
+            </section>
+        <!--Container 02-->
+            <section>
+                <article>
+                    <div class="d-flex">
+                        <div style="background: var(--bs-terciaria);" class="w-50 d-flex justify-content-center align-items">
+                            <div class="" style="max-height: 450px; overflow-y: auto">
+                                <br>
+                                <!--Introdução-->
+                                    <span style="color: var(--color-primaria);">
+                                        <span style="gap: .5rem;" class="d-flex align-items-end">
+                                            <img style="width: 15% !important;" src="./img/icon/Icon01.png" alt="">
+                                            <span >
+                                                <h3 style="background: url(./img/icon/SetaAmarela.png); background-size: contain; width: 170% !important;font-family: PlayfairDisplay-Regular !important; display: flex; justify-content: center; align-items: center; color: var(--bs-white);">Parte 1</h3>
+                                            </span>
+                                        </span>
+                                            <br>
+                                        <span>
+                                            <p style="font-size: 1.2rem;"><strong>Comportamentos e atitudes de resiliência e adaptabilidade</strong></p>
+                                        </span>
+                                    </span>
+                                <!--Introdução-->
+                                    <br>
+                                <!--Texto-->
+                                    <span style="color: var(--color-Secundaria);">  
+                                        <p>Em um mundo em constante transformação, seja no</p>
+                                        <p>ambiente do trabalho ou na sociedade, onde as</p>
+                                        <p>mudanças são muitas vezes imprevisíveis e os</p>
+                                        <p>desafios crescem a todo momento, reflita: como</p>
+                                        <p>podemos demonstrar adaptabilidade e resiliência</p>
+                                        <p>para inspirar pessoas e alcançar resultados</p>
+                                        <p>esperados? Pense: quais são as atitudes ou</p>
+                                        <p>comportamentos que demonstram resiliência e</p>
+                                        <p>adaptabilidade?</p>
+                                            <br>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                        <p></p>
+                                    </span>
+                                <!--Texto-->
+                            </div>
+                        </div>
+                        <span class="w-50">
+                            <img class="w-100" src="./img/Segunda.webp" alt="">
+                        </span>
+                    </div>
+                </article>
+            </section>
     </main>
 </body>
     <!--Js-->
