--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             </div>
                         </span>
                         <span class="w-50">
-                            <img class="w-100" src="./img/Segunda.webp" alt="">
+                            <img class="w-100" style="height: 510px !important;" src="./img/Segunda.webp" alt="">
                         </span>
                     </div>
                 </article>
